Sun Nov 30 08:47:01 2003  Joern Thyssen  <jth@gnubg.org>

	New command "clear hint" to allow CLI users to force
	re-evaluation of "hint" after changing settings.
	(suggested by Achim)

	* gnubg.c (CommandClearHint): new command "clear hint".
	* gnubg.c (InvalidateStoredCube): new function.
	* gnubg.c (HintCube): fix typo

Sat Nov 29 21:22:13 2003  Joern Thyssen  <jth@gnubg.org>

	Implement history

	* gnubg.c (real_main, PromptForExit, ProcessInput): implement
	history
	* gnubg.c (CommandHistory): new command "history".

Sat Nov 29 11:02:50 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c: new python command "nextturn" to
	emulate C routine "NextTurn".
	* gnubgmodule.c (PyGameStats): add a few stats.
	* gnubgmodule.c (PythonCommand): add calls to nextturn.

Sat Nov 29 10:14:33 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (ReportBug): use uname to improve logic.

Thu Nov 27 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
	* htmlimages.c: Fix dice colour
	* gtkboard.c: Remove previous fix...

Wed Nov 26 22:12:37 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c: when opening the bug report page in a browser window
	make gnubg fill in its version, build date and the operating system

Mon Nov 24 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Make sure preview appears if libxml not present
	* gtkboard.c: Remove valgrind error

Sun Nov 23 21:07:12 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c function header comments for token handling

Sat Nov 21 21:19:17 2003 Oystein Johansen <oystein@gnubg.org>

        * gtkgame.c: corrected some links (reported by Frank Grosse)

Thu Nov 20 20:24:04 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - board setup in .sgf files of rollouts only worked if
	  player 0 made first move, now appears to be correct for both
	  players and double by both players

Thu Nov 20 07:44:55 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gtkgame.c (EvalWidget): Add /* xgettext: no-c-format */ comment.
